# claude-statusline

./: .gitignore  CLAUDE.md  Makefile  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
claude-statusline/: statusline-command.py
claude-statusline/.claude-plugin/: plugin.json
claude-statusline/commands/: configure.md  setup.md  update.md
claude-statusline/skills/explain/: SKILL.md
docs/plans/: 2026-03-08-dependency-injection-design.md  2026-03-08-dependency-injection-plan.md
tests/: conftest.py  test_flow_layout.py  test_formatting.py  test_git.py  test_integration.py  test_progress_bar.py  test_usage.py  test_velocity.py
